<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anudeesh.chatapp.SignUpActivity"
    android:orientation="vertical"
    android:background="#dfd2fc">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFNameValSignup"
        android:layout_marginTop="10dp"
        android:hint="@string/fname_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLNameValSignup"
        android:layout_marginTop="5dp"
        android:hint="@string/lname_label"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="5dp"
        android:entries="@array/gender" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmailValSignup"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPwdValSignup"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/pwd_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextRepeatPwdValSignup"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/repeat_pwd_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Choose a Profile Picture"
        android:id="@+id/textViewUpload"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageViewUpload"
            android:src="@drawable/upload" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/buttonCancelSignup"
            android:layout_marginRight="30dp"
            android:background="#036fd4"
            android:textColor="#fff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:id="@+id/buttonSignup"
            android:background="#036fd4"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>
